@@ -82,6 +82,12 @@ public class IOSApplicationConfiguration {
 	/** The maximum number of threads to use for network requests. Default is {@link Integer#MAX_VALUE}. */
 	public int maxNetThreads = Integer.MAX_VALUE;
 
+	/** The minimal buffer size of the audio device. Below 2048 can lead to buggy behavior. */
+	public int audioDeviceBufferSize = 512;
+
+	/** How many buffers to use for audio device */
+	public int audioDeviceBufferCount = 9;
+
 	/** whether to use audio or not. Default is <code>true</code> * */
 	public boolean useAudio = true;
 
