@@ -1,0 +1,11 @@
+/*DO NOT EDIT THIS FILE - it is machine generated*/
+
+package com.badlogic.gdx.backends.iosrobovm.objectal;
+
+/** DO NOT EDIT THIS FILE - it is machine generated */
+public class ALConsts {
+
+	public static int AL_FORMAT_MONO16 = 0x1101;
+
+	public static int AL_FORMAT_STEREO16 = 0x1103;
+}
