@@ -10,18 +10,15 @@ import org.robovm.rt.bro.annotation.Library;
 import org.robovm.rt.bro.ptr.VoidPtr;
 
 /** DO NOT EDIT THIS FILE - it is machine generated
- * @author Niklas Therning */
+ * @author Jile Gao */
 @Library(Library.INTERNAL)
 @NativeClass
-public class ALBuffer extends NSObject {
+public class ALWrapper extends NSObject {
 
 	static {
-		ObjCRuntime.bind(ALBuffer.class);
+		ObjCRuntime.bind(ALWrapper.class);
 	}
 
-	@Method(selector = "bufferId")
-	public native int bufferId ();
-
-	@Method(selector = "initWithName:data:size:format:frequency:")
-	public native ALBuffer initWithNameDataSizeFormatFrequency (String name, VoidPtr data, int size, int format, int frequency);
+	@Method(selector = "bufferData:format:data:size:frequency:")
+	public static native boolean bufferData (int bufferId, int format, VoidPtr data, int size, int frequency);
 }
